--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
 </head>
 <body bgcolor="#FFE4C4">
 <form action="success" method="post">
-    <table align="left">
+    <table align="centre">
         <tr>
             <td>
                 <label path="VehicleType">Vehicle Type: </label>
@@ -46,6 +46,10 @@
             </td>
         </tr>
     </table>
+</form>
+<form action="home" method="post">
+    <br>
+    <input type="submit" value="return on home">
 </form>
 </body>
 </html>
