--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div class="Grret">
-    <h1> ${greeting } </h1>
-    <p> ${tagline } </p>
+    <h1> ${model.greeting } </h1>
+    <p> ${model.tagline } </p>
 </div>
 <form action="register" method="post">
     <br>
